--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>DBProject</name>
+	<name>PRJ1-2_2015-18380</name>
 	<comment>JavaCC Nature</comment>
 	<projects>
 	</projects>
